<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PayTracker</string>
    <string name="action_settings">Settings</string>
   	<string name="hello_world">Hello world!</string>
    <string name="sms_label">Enter SMS Message:</string>
    <string name="send_sms_label">Send SMS</string>
    <string name="menu_settings">Menu</string>
    <string name="sync_label">Sync</string>
     
    <string name="submit_label">Submit</string>
    <string name="cancel_label">Cancel</string>
    <string name="amount_label">Amount Paid</string>
    <string name="phone_label">Phone Number</string>
    <string name="billno_label">Bill No</string>
    <string name="Synchronize">Synchronize</string>
  
    
    <string name="payment_label">Payment</string>
    <string name="select_partyName_label">Please Select Party Name...</string>
    <string name="enter_salesId_label">Please Enter Your Id</string>
    <string name="error_label">Id cannot be Blank</string>
    <color name="autocompletet_background_color">#E65A14</color>    
   <string name="auto_complete">AutoComplete</string>
    
</resources>