<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
     android:background="@drawable/appback3">

    <EditText
        android:id="@+id/sales_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_sales_id"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:background="#F9DBCD"
        android:ems="10"
          android:layout_marginLeft="10dp"
          android:layout_marginRight="10dp"
        android:inputType="number"
        android:textColor="#731616"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/dlg_submit"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_below="@+id/sales_id"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:background="#E65A14"
        android:text="@string/submit_label"
        android:textColor="#731616"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_sales_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:text="@string/enter_salesId_label"
        android:textColor="#731616"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/txt_sales_id"
        android:layout_below="@+id/dlg_submit"
        android:layout_marginTop="20dp"
        android:text="@string/error_label"
        android:textColor="#731616"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="invisible" />

</RelativeLayout >